[gd_scene load_steps=7 format=3 uid="uid://cmo20o7p7mjmc"]

[ext_resource type="Script" uid="uid://b5ttvmp7yyidc" path="res://Test_Demo/Scenes/Characters/test_first_player/Character.gd" id="1_nkib8"]
[ext_resource type="PackedScene" uid="uid://di5bh5b4nvo1e" path="res://Test_Demo/Scenes/Projectiles/Test_ball/Test_ball.tscn" id="2_bg72j"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_8ot3w"]

[sub_resource type="CylinderMesh" id="CylinderMesh_u50je"]

[sub_resource type="CylinderMesh" id="CylinderMesh_k7pfd"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kykhh"]

[node name="Character" type="RigidBody3D"]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
linear_damp = 0.7
script = ExtResource("1_nkib8")
move_speed = 30
projectile = ExtResource("2_bg72j")

[node name="Skin" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="body" type="MeshInstance3D" parent="Skin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0384624, 0, -0.00516415)
mesh = SubResource("CapsuleMesh_8ot3w")
skeleton = NodePath("../..")

[node name="face" type="MeshInstance3D" parent="Skin"]
transform = Transform3D(-2.46152e-08, 1.89579e-08, 0.8, 0.563131, -9.23706e-14, 3.49691e-08, 0, 0.433707, -3.49691e-08, 0.0166044, 0.281566, -0.221722)
mesh = SubResource("CylinderMesh_u50je")

[node name="hand" type="MeshInstance3D" parent="Skin"]
transform = Transform3D(-1.57361e-08, -2.62268e-08, 0.32, -0.36, 3.37508e-14, -1.39876e-08, 0, -0.6, -1.39876e-08, 0.698061, 0, -0.549275)
mesh = SubResource("CylinderMesh_k7pfd")

[node name="pos_projectile" type="Marker3D" parent="Skin"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.59168, 0.097386, -1.68986)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0384624, 1, -0.00516415)
shape = SubResource("CapsuleShape3D_kykhh")

[node name="CameraController" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
top_level = true

[node name="CameraTarget" type="Node3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 14.34, 0)

[node name="Camera3D" type="Camera3D" parent="CameraController/CameraTarget"]
transform = Transform3D(1, 0, 0, 0, 1, 0.000593394, 0, -0.000593394, 1, 0, 0.000192642, 0.0001297)

[node name="Bullet_cooldown_Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.8
one_shot = true

[node name="shot_Timer" type="Timer" parent="Bullet_cooldown_Timer"]
unique_name_in_owner = true
wait_time = 0.2

[connection signal="timeout" from="Bullet_cooldown_Timer" to="." method="_on_bullet_cooldown_timer_timeout"]
[connection signal="timeout" from="Bullet_cooldown_Timer/shot_Timer" to="." method="_on_shot_timer_timeout"]
